<resources>
    <string name="app_name">TipCalculatorPart3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="_25">25%</string>
    <string name="_18">18%</string>
    <string name="_15">15%</string>
    <string name="_10">10%</string>
    <string name="total_with_tip">Total With Tip:</string>
    <string name="guest">Guest:</string>
    <string name="next"><![CDATA[NEXT>]]></string>
    <string name="subtotal_plus_tip">Subtotal Plus Tip:</string>
    <string name="_0_00">$0.00</string>
    <string name="each_person_owes">Each Person Owes:</string>
    <string name="_0_0000">$0.00</string>
    <string name="round_up">Round Up</string>
    <string name="round_down">Round Down</string>
    <string-array name="guest_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>