<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/subPlusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_plus_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/personText"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTipAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/owesAmountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/each_person_owes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/roundUpButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subPlusText" />

    <TextView
        android:id="@+id/owesAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/roundDownButton"
        app:layout_constraintEnd_toEndOf="@+id/subTipAmountText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/subTipAmountText"
        app:layout_constraintTop_toBottomOf="@+id/subTipAmountText" />

    <Button
        android:id="@+id/roundUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_up"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personText" />

    <Button
        android:id="@+id/roundDownButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_down"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/owesAmountText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />
</androidx.constraintlayout.widget.ConstraintLayout>